Groovy script added.

--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,2 +1,7 @@
-#Sun Dec 08 07:02:48 IST 2019
+#Sun Dec 08 07:45:56 IST 2019
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
+execution.default.webUi.enablePageLoadTimeout=false
+execution.default.webUi.pageLoadTimeout=30
+execution.default.webUi.ignorePageLoadTimeOutException=false
+execution.default.webUi.actionDelay=2
+execution.default.waitForIEHanging=600
